plugins/devkit/devkit-java-tests/testData/inspections/postfixTemplates/MyTemplate.java
import com.intellij.codeInsight.template.postfix.templates.PostfixTemplate;

public class <error descr="Postfix template does not have a description">MyTemplate</error> extends PostfixTemplate  {


}
